--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-2fa": "^2.0.3",
     "pg": "^8.7.1",
     "qrcode-terminal": "^0.12.0",
-    "randomstring": "^1.2.2"
+    "randomstring": "^1.2.2",
+    "sanitize-html": "^2.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
